chore: add deploy workflow for Expo

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/react": "~18.0.24",
     "@types/react-dom": "~18.0.8",
     "@types/uuid": "^9.0.0",
