--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,10 +30,13 @@ jobs:
           npx expo install
 
       - name: Log in to Expo
-        run: npx expo login -u "${{ secrets.EXPO_USERNAME }}" -p "${{ secrets.EXPO_PASSWORD }}"
+        env:
+          EXPO_USERNAME: ${{ secrets.EXPO_USERNAME }}
+          EXPO_PASSWORD: ${{ secrets.EXPO_PASSWORD }}
+        run: npx expo login -u "$EXPO_USERNAME" -p "$EXPO_PASSWORD"
 
       - name: Publish to Expo (production)
         run: npx expo publish --non-interactive --release-channel production
 
       - name: Finished
-        run: echo "Volunteam App deployed successfully from feature/manage-data-flows."
+        run: echo "✅ Volunteam App deployed successfully from branch '${{ github.event.inputs.branch }}'."
