--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install
-          npx expo install
+          npm install --legacy-peer-deps
+          npx expo install --fix
 
       - name: Log in to Expo
         env:
