--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,15 +18,16 @@ jobs:
         with:
           ref: ${{ github.event.inputs.branch }}
 
-      - name: Set up Node.js
+      - name: Set up Node.js (v20)
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20.19.4
           cache: "npm"
 
       - name: Install dependencies
         run: |
-          npm install --legacy-peer-deps
+          rm -rf node_modules package-lock.json
+          npm install --force
           npx expo install --fix
 
       - name: Log in to Expo
