fix: update deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,13 @@ jobs:
           npm install @types/react@19.1.10 @types/react-dom@19.1.7 --force
           echo "✅ Dependencies installed with forced resolution"
 
+      - name: Install EAS CLI
+        run: npm install -g eas-cli
+
       - name: Publish to Expo via EAS Update
-        run: npx eas update --channel production --message "Deploy from branch ${{ github.event.inputs.branch }}"
+        run: |
+          export CI=1
+          npx eas update --channel production --message "Deploy from branch feature/manage-data-flows"
         env:
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
 
