--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Log in to Expo
         run: npx expo login -u "${{ secrets.EXPO_USERNAME }}" -p "${{ secrets.EXPO_PASSWORD }}"
 
-      - name: Publish to Expo (production)
-        run: npx expo publish --non-interactive --release-channel production
+      - name: Publish native bundle only
+        run: npx eas update --channel production --message "Deploy native only" --platform ios,android
 
       - name: Finished
         run: echo "Volunteam App deployed successfully from feature/manage-data-flows."
