Fix EAS build configuration and React type dependencies

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -30,7 +30,7 @@ on:
         default: "preview"
 
 jobs:
-  build-and-release:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -47,12 +47,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-          rm -rf node_modules package-lock.json
           npm install --force
-          npm install @types/react@19.1.10 @types/react-dom@19.1.7 --force
           echo "Dependencies installed"
 
-      - name: Setup EAS
+      - name: Setup Expo and EAS
         uses: expo/expo-github-action@v8
         with:
           eas-version: latest
@@ -63,59 +61,29 @@ jobs:
         run: |
           echo "Starting EAS build for ${{ github.event.inputs.platform }}..."
 
-          # Start the build and capture output
-          eas build --platform ${{ github.event.inputs.platform }} --profile ${{ github.event.inputs.profile }} --non-interactive --no-wait > build_output.txt
+          # Run build and wait (this will take 10-20 minutes)
+          eas build \
+            --platform ${{ github.event.inputs.platform }} \
+            --profile ${{ github.event.inputs.profile }} \
+            --non-interactive \
+            --wait
 
-          # Extract build ID from output
-          BUILD_ID=$(grep -oP 'Build ID: \K[a-f0-9-]+' build_output.txt | head -1)
+          # Get the latest build info
+          BUILD_INFO=$(eas build:list --platform ${{ github.event.inputs.platform }} --limit 1 --json)
+          BUILD_ID=$(echo $BUILD_INFO | jq -r '.[0].id')
+          DOWNLOAD_URL=$(echo $BUILD_INFO | jq -r '.[0].artifacts.buildUrl')
+
           echo "build_id=$BUILD_ID" >> $GITHUB_OUTPUT
-          echo "Build started with ID: $BUILD_ID"
+          echo "download_url=$DOWNLOAD_URL" >> $GITHUB_OUTPUT
 
-          # Wait for build to complete and get the download URL
-          echo "Waiting for build to complete..."
-          eas build:view $BUILD_ID --json > build_details.json
-
-          # Poll until build is complete (max 30 minutes)
-          for i in {1..60}; do
-            sleep 30
-            eas build:view $BUILD_ID --json > build_details.json
-            STATUS=$(jq -r '.status' build_details.json)
-            echo "Build status: $STATUS (check $i/60)"
-            
-            if [ "$STATUS" = "finished" ]; then
-              echo "Build completed successfully!"
-              DOWNLOAD_URL=$(jq -r '.artifacts.buildUrl' build_details.json)
-              echo "download_url=$DOWNLOAD_URL" >> $GITHUB_OUTPUT
-              echo "Download URL: $DOWNLOAD_URL"
-              break
-            elif [ "$STATUS" = "errored" ] || [ "$STATUS" = "canceled" ]; then
-              echo "Build failed with status: $STATUS"
-              exit 1
-            fi
-          done
-
-      - name: Download build artifact
-        if: success()
-        run: |
-          echo "Downloading build from: ${{ steps.build.outputs.download_url }}"
-
-          # Determine file extension based on platform
-          if [ "${{ github.event.inputs.platform }}" = "android" ]; then
-            EXT="apk"
-          elif [ "${{ github.event.inputs.platform }}" = "ios" ]; then
-            EXT="ipa"
-          else
-            EXT="zip"
-          fi
-
-          # Download the build
-          curl -L "${{ steps.build.outputs.download_url }}" -o "volunteam-app.$EXT"
-
-          echo "Build downloaded as volunteam-app.$EXT"
-          ls -lh volunteam-app.$EXT
+          echo "Build completed!"
+          echo "Build ID: $BUILD_ID"
+          echo "Download URL: $DOWNLOAD_URL"
+        env:
+          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
 
       - name: Create GitHub Release
-        if: success()
+        if: success() && steps.build.outputs.download_url != 'null'
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.event.inputs.version }}
@@ -126,49 +94,76 @@ jobs:
             **Branch:** `${{ github.event.inputs.branch }}`
             **Platform:** `${{ github.event.inputs.platform }}`
             **Build Profile:** `${{ github.event.inputs.profile }}`
-            **Build Date:** ${{ github.event.repository.updated_at }}
+            **Build ID:** `${{ steps.build.outputs.build_id }}`
 
-            ### Download Options
+            ### Download the App
 
-            - **Direct Download:** Use the attached file below
-            - **EAS Build URL:** ${{ steps.build.outputs.download_url }}
+            **Direct Download Link (EAS):**
+            ${{ steps.build.outputs.download_url }}
 
             ### Installation Instructions
 
             #### Android (APK):
-            1. Download the `.apk` file
-            2. Enable "Install from Unknown Sources" in your device settings
-            3. Open the APK file and follow installation prompts
+            1. Click the download link above
+            2. Download the `.apk` file to your Android device
+            3. Enable "Install from Unknown Sources" in Settings → Security
+            4. Open the APK file and tap "Install"
 
             #### iOS (IPA):
-            1. Requires TestFlight or enterprise distribution
+            1. Requires TestFlight or enterprise distribution profile
             2. Contact the administrator for installation instructions
 
-            ### Changelog
+            ### What's New
 
-            - Initial release from branch `${{ github.event.inputs.branch }}`
-            - Includes all features up to commit ${{ github.sha }}
+            - Built from branch `${{ github.event.inputs.branch }}`
+            - Commit: `${{ github.sha }}`
+            - All features and fixes up to this commit are included
 
             ---
 
-            Built with using EAS Build
-          files: |
-            volunteam-app.*
+            ### Assignment Submission Links
+
+            **GitHub Release Page:** https://github.com/${{ github.repository }}/releases/tag/${{ github.event.inputs.version }}
+
+            **Build Download URL:** ${{ steps.build.outputs.download_url }}
+
+            ---
+
+            Built with using [Expo EAS Build](https://expo.dev/)
           draft: false
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Summary
+      - name: Build Summary
         if: success()
         run: |
-          echo "Build and Release Complete!"
-          echo ""
-          echo "Build ID: ${{ steps.build.outputs.build_id }}"
-          echo "Download URL: ${{ steps.build.outputs.download_url }}"
-          echo "Release Version: ${{ github.event.inputs.version }}"
-          echo "Release URL: https://github.com/${{ github.repository }}/releases/tag/${{ github.event.inputs.version }}"
-          echo ""
-          echo "Your assignment submission links:"
-          echo "   - GitHub Release: https://github.com/${{ github.repository }}/releases/tag/${{ github.event.inputs.version }}"
-          echo "   - Build Download: ${{ steps.build.outputs.download_url }}"
+          echo "## Build and Release Complete!" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Build Details" >> $GITHUB_STEP_SUMMARY
+          echo "- **Build ID:** \`${{ steps.build.outputs.build_id }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- **Platform:** ${{ github.event.inputs.platform }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Profile:** ${{ github.event.inputs.profile }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Assignment Submission Links" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**GitHub Release Page:**" >> $GITHUB_STEP_SUMMARY
+          echo "https://github.com/${{ github.repository }}/releases/tag/${{ github.event.inputs.version }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Build Download URL:**" >> $GITHUB_STEP_SUMMARY
+          echo "${{ steps.build.outputs.download_url }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "Copy both links above for your assignment submission!"
+
+      - name: Build Failed
+        if: failure()
+        run: |
+          echo "## Build Failed" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "The EAS build encountered an error. Please check the logs above for details." >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "Common issues:" >> $GITHUB_STEP_SUMMARY
+          echo "- Missing or invalid \`app.json\` configuration" >> $GITHUB_STEP_SUMMARY
+          echo "- Invalid \`eas.json\` build profiles" >> $GITHUB_STEP_SUMMARY
+          echo "- Missing EXPO_TOKEN secret" >> $GITHUB_STEP_SUMMARY
+          echo "- Platform-specific configuration errors" >> $GITHUB_STEP_SUMMARY
