--- a/package.json
+++ b/package.json
@@ -46,10 +46,14 @@
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
-    "@types/react": "~18.0.24",
-    "@types/react-dom": "~18.0.8",
+    "@types/react": "~19.1.0",
+    "@types/react-dom": "~19.1.0",
     "@types/uuid": "^9.0.0",
     "typescript": "^4.6.3"
+  },
+  "overrides": {
+    "@types/react": "~19.1.0",
+    "@types/react-dom": "~19.1.0"
   },
   "private": true
 }
